# Candidate-Matching

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run.py
.cursor/rules/: ai-hiring-platform.mdc  python-fastapi.mdc
app/: main.py
app/agents/candidate_discovery/: agent.py
app/api/: routes.py
app/api/v1/: candidates.py  discovery.py
app/config/: settings.py
app/database/: init_db.py
app/graphs/candidate_discovery/: __init__.py  graph.py  nodes.py  schema.py
app/models/: candidate.py
app/services/: candidate_service.py  discovery_service.py
app/tools/: linkedin.py
app/utils/: rate_limiter.py
tests/: conftest.py  test_candidate_discovery_agent.py
