[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candidate-matching"
version = "0.1.0"
description = "AI-driven candidate and job matching platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.0.267",
    "openai>=1.3.0",
    "browser-use>=0.1.0",
    "playwright>=1.38.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    "tenacity>=8.2.3",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.286",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = [] 